[gd_scene load_steps=5 format=3 uid="uid://dy3xmc8rtyi0x"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_qooao"]
[ext_resource type="Texture2D" uid="uid://d0iao4rc5nj5o" path="res://assets/sprites/player.png" id="2_5ptuj"]
[ext_resource type="PackedScene" uid="uid://di46pdj1hcue8" path="res://scenes/reflect_area.tscn" id="2_cr2cw"]

[sub_resource type="CircleShape2D" id="CircleShape2D_map5u"]
radius = 26.0192

[node name="Player" type="CharacterBody2D"]
texture_filter = 1
script = ExtResource("1_qooao")

[node name="ShadowTrail" type="Line2D" parent="."]

[node name="MainTrail" type="Line2D" parent="."]

[node name="ElectricTrail" type="Line2D" parent="."]

[node name="ReflectArea" parent="." instance=ExtResource("2_cr2cw")]

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_map5u")

[node name="LaserRaycast" type="RayCast2D" parent="."]

[node name="Sprite" type="Sprite2D" parent="."]
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_5ptuj")

[node name="FireCooldown" type="Timer" parent="."]

[node name="DashDur" type="Timer" parent="."]

[node name="DashCooldown" type="Timer" parent="."]

[connection signal="timeout" from="DashDur" to="." method="_on_dash_dur_timeout"]
[connection signal="timeout" from="DashCooldown" to="." method="_on_dash_cooldown_timeout"]

[editable path="ReflectArea"]
